# docs-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
src/docs_assistant/: config.py  constants.py  embeddings.py  ingest.py  load.py  prompts.py  qa_chain.py  retrieval.py
src/docs_assistant/data/: browser_docs_crawler.py  html_extractor.py
src/docs_assistant/utils/: browser_docs_crawler.py
